<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Linear Layout</string>

    <string name="red">RED</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="violet">VIOLET</string>
    <string name="black">BLACK</string>
    <string name="white">WHITE</string>
    <string name="io_err">The hard drive has failed...ooops!</string>

</resources>
